# Toxer

./: .gitignore  CMakeLists.txt  CONTRIBUTE.md  Readme.md  configure
cmake/: Qt5Static.cmake
lib/: CMakeLists.txt
qml/: AddFriendView.qml  AppActions.qml  CreateProfile.qml  FriendDelegate.qml  FriendsView.qml  MainView.qml  MainViewSlim.qml  MainViewSplit.qml  Profiles.qml  SelectProfile.qml  Style.qml  ViewLoader.qml  qml.qrc
qml/base/: MainViewBase.qml  Page.qml
qml/controls/: FlatButton.qml  SubPage.qml
qml/settings/: Appearance.qml  Overview.qml
res/: res.qrc
sailfish/: .gitignore  README.md  build-libs.sh  copy-project.sh  dev-prepare.sh  env  package.sh  setup-mersdk.sh  toxer.desktop
sailfish/rpm/: toxer.changes.in  toxer.spec  toxer.yaml
scripts/: InstallToxcore.sh  configure  getToxCore.sh
scripts/linux/: env
src/: CMakeLists.txt  IToxNotify.cpp  IToxNotify.h  Settings.cpp  Settings.h  ToxTypes.cpp  ToxTypes.h  Toxer.cpp  Toxer.h  main.cpp
src/Private/: ToxBootstrap.cpp  ToxBootstrap.h  ToxProfile.cpp  ToxProfile.h  ToxerPrivate.cpp  ToxerPrivate.h
